--- a/login/login.html
+++ b/login/login.html
@@ -36,12 +36,12 @@
         const password = document.getElementById('password').value;
 
         try {
-            const response = await axios.post(`https://1f94-92-253-236-148.ngrok-free.app/login`, {
+            const response = await axios.post(`https://7957-178-212-96-175.ngrok-free.app/login`, {
                 username: username,
                 password: password
             })
             document.cookie = `token=${response.data.token}; path=/; max-age=3600`
-            window.location.href = "/zalupa"
+            window.location.href = "/profile"
             alert('SBS successful!');
         } catch (error) {
             console.error('Error:', error);
