--- a/profile/profile.html
+++ b/profile/profile.html
@@ -44,7 +44,7 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
 
-    const localhost = "http://localhost:8000"
+    const localhost = "http://localhost:5000"
 
     function parseJwt(token) {
         const base64Url = token.split('.')[1];
@@ -99,9 +99,8 @@
         const headers = {
             'Authorization': `Bearer ${token}`
         };
-        const data = {userId}
 
-        axios.post(url, data, {headers})
+        axios.post(url, {userId: userId}, {headers})
             .then(response => {
                 console.log(response.data)
             })
@@ -113,6 +112,7 @@
 
     socket.on("users", (data) => {
         data = data.filter(user => user.username !== currentUser.username)
+        console.log(data)
         onlineUsers.innerHTML = "";
         data.forEach(user => {
             console.log(`${user.socketId}`);
