--- a/login/login.html
+++ b/login/login.html
@@ -24,11 +24,15 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+</script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+
+<script>const url = `http://localhost:5000`</script>
+
 <script type="module">
     const form = document.getElementById('registrationForm');
-    const url = `http://localhost:5000`
 
     form.addEventListener('submit', async (event) => {
         event.preventDefault();
